--- a/templates/chat/combat-power-message.hbs
+++ b/templates/chat/combat-power-message.hbs
@@ -22,18 +22,18 @@
     <div class="chat-card__header chat-card__header--saved-miss">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.SavedMiss"}}</div>
   {{/if}}
   <div class="chat-card__combat-roll">
-    <div class="chat-card__combat-roll-formula formula-toggle">
-      <span class="roll-formula">{{roll.formula}}</span>
+    <div class="chat-card__formula-toggle formula-toggle">
+      <span class="chat-card__formula">{{roll.formula}}</span>
       <i class="fas fa-chevron-down formula-toggle-icon"></i>
     </div>
     <div class="chat-card__roll-details" style="display: none;">
       {{#each roll.terms as |term|}}
         {{#if term.results}}
-          <div class="roll-term">
-            <span class="roll-term-formula">{{term.formula}}</span>
-            <div class="roll-term-results">
+          <div class="chat-card__roll-term">
+            <span class="chat-card__roll-term-formula">{{term.formula}}</span>
+            <div class="chat-card__roll-term-results">
               {{#each term.results as |result|}}
-                <span class="die-result {{#if result.discarded}}discarded{{/if}}">{{result.result}}</span>
+                <span class="chat-card__die-result {{#if result.discarded}}chat-card__die-result--discarded{{/if}}">{{result.result}}</span>
               {{/each}}
             </div>
           </div>
@@ -41,37 +41,37 @@
       {{/each}}
     </div>
     <div class="chat-card__combat-roll-result">
-      <span class="power-value">{{roll.total}}</span>
+      <span class="chat-card__value chat-card__value--power">{{roll.total}}</span>
     </div>
   </div>
   {{#if acCheck}}
     <div class="chat-card__effects chat-card__effects--ac-check">
       <div class="chat-card__effects--title">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.ACCheck"}}</div>
       {{#each targetRollData as |target|}}
-          <div class="chat-card__effects--name flexrow"> {{this.name}}:
-            {{#each this.abilities as |ability key|}}
-              {{#ifCond target.compare ">=" ability.ac}}
-                <div class="chat-card__effects--hit flex-group-center">
-              {{/ifCond}}
-              {{#ifCond target.compare "<" ability.ac}}
-                <div class="chat-card__effects--miss flex-group-center">
-              {{/ifCond}}
-              {{ability.abbr}}
-               </div>
-            {{/each}}
-          </div>
+        <div class="chat-card__effects--name flexrow"> {{this.name}}:
+          {{#each this.abilities as |ability key|}}
+            {{#ifCond target.compare ">=" ability.ac}}
+              <div class="chat-card__effects--hit flex-group-center">
+            {{/ifCond}}
+            {{#ifCond target.compare "<" ability.ac}}
+              <div class="chat-card__effects--miss flex-group-center">
+            {{/ifCond}}
+            {{ability.abbr}}
+             </div>
+          {{/each}}
+        </div>
       {{/each}}
     </div>
   {{/if}}
 {{/if}}
 
 {{#if system.description}}
-<div class="chat-card__description">
-  {{#if system.rollActorName}}
-    <div class="chat-card__description--header">{{actor.name}}. . . </div> 
-  {{/if}}
-  {{{system.description}}}
-</div>
+  <div class="chat-card__description">
+    {{#if system.rollActorName}}
+      <div class="chat-card__description--header">{{actor.name}}. . . </div> 
+    {{/if}}
+    {{{system.description}}}
+  </div>
 {{/if}}
 
 <hr class="chat-card__hr" />
