Added additional checks for gear equip states, and settings to surpress gear equip and unequip messages.

--- a/templates/actor/gear.hbs
+++ b/templates/actor/gear.hbs
@@ -108,8 +108,15 @@
             class="item-control item-unequip"
             title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Equip.label"}}'
             data-action='toggleGear'
+            {{#ifCond item.system.quantity "<=" 0}}
+            disabled
+            {{/ifCond}}
           >
+            {{#ifCond item.system.quantity "<=" 0}}
+              <i class="fa-solid fa-triangle-exclamation"></i>
+            {{else}}
             <i class='fa-solid fa-helmet-battle'></i>
+            {{/ifCond}}
           </a>
           <a
             class='item-control item-edit'
