--- a/src/scss/eventide-rp-system.scss
+++ b/src/scss/eventide-rp-system.scss
@@ -19,6 +19,7 @@
 @use 'components/popup-forms';
 @use 'components/gear-creator';
 @use 'components/initiative-roll';
+@use 'components/sound-settings';
 
 .eventide-rp-system {
   @include meta.load-css('components/forms');
